--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,7 @@
 MONGODB_URI=mongodb://localhost:27017/mern-telegram-auth
-JWT_SECRET=your-super-secret-jwt-key-change-this
-TELEGRAM_BOT_TOKEN=your-bot-token-from-botfather
-TELEGRAM_BOT_USERNAME=YourBotName
+JWT_SECRET=your-production-jwt-secret-very-long-and-secure
+TELEGRAM_BOT_TOKEN=7746504871:AAHjrNqdJeSWFMe-b2MwWg_iM9D8HyEJINM
+TELEGRAM_BOT_USERNAME=designlabbbot
 PORT=5000
+FRONTEND_URL=https://localhost:3000
+NODE_ENV=production
